--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
